# wave-gpt

./: LICENSE.txt  README.md  main.ipynb  model.py  pyproject.toml  text_main.py  train.py  wave_decoder_encoder.py  wave_main.py  wave_model.py
benchmarks/: diff_bench.py  diff_bench_decimal.py  text_bench.py  wave_bench.py  wave_bench_decimal.py
src/: text_bench.py  train.py
src/diff_gpt/: train.py
src/diff_gpt/model/: block.py  diff_gpt.py  feed_forward.py  gpt.py  kv_cache.py  mha.py  rms_norm.py  rope.py  swi_glu.py
src/diff_gpt/optimizer/: adamw_schedulefree.py
src/diff_gpt/sampler/: __init__.py  nucleus.py  temperature.py
src/diff_gpt/sampling/: nucleus.py  temperature.py
src/wave_gpt/: model.py  train.py  wave_bench.py  wave_decoder_encoder.py  wave_encoder_decoder.py  wave_model.py
src/wave_gpt/optimizer/: adamw_schedulefree.py
src/wave_gpt/sampling/: nucleus.py  temperature.py
tests/: test_wave_encoder_decoder.py
tests/diff_gpt/encoder_decoder/: test_differentiate_integrate.py  test_encoder_decoder.py
tests/diff_gpt/model/: test_block.py  test_feed_forward.py  test_gpt.py  test_kv_cache.py  test_mha.py  test_rms_norm.py  test_rope.py  test_rope_freqs.py  test_swi_glu.py
tests/diff_gpt/optimizer/: test_adamw_schedulefree.py
tests/wave_gpt/: test_differentiate_integrate.py  test_rope.py  test_wave_encoder_decoder.py
