[project]
name = "wave-gpt"
version = "0.11.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "schedulefree>=1.4.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]
